<resources>
    <string name="app_name">HomePage</string>
    <string name="Dashboard">Home</string>
    <string name="my_culture"> <b>Culture That Unites us Together</b><i>Agriculture</i></string>
    <string name="Dashboard_moto"><b>"Culture That Unites Us Together"</b></string>
    <string name="search_hint">Search Plants</string>
    <string name="logo">logo</string>
    <string name="lorem">A new series where we will be building  of the Events App where we will be implementing the custom collapsing toolbar with a custom search bar</string>
    <string name="Dashboard_moto1">Agriculture</string>
    <string name="plant_disease_detection">Plant Disease Detection</string>
    <string name="welcomeText">Good Morning\n Welcome To My Culture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="soil_detection">Soil \n Detection</string>
    <string name="pest_detection">Pest \n Detection</string>
    <string name="plant_disease_pest_detection">Plant Disease Pest Detection</string>
    <string name="pest_bg">pestImage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="you">You</string>
    <string name="soilContentDescription">soil_bg</string>
    <string name="plantContentDescription">plant_bg</string>
    <string name="scan_your_crop">Scan Your Crop</string>
    <string name="detected">DETECTED</string>
    <string name="click_on_result_to_know_more">CLick On result To know more</string>

    <!--    //////////////////////////////////////////////-->
    <!--    <string name="app_name">Agro-App</string>-->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="_102_street_2714_don">102 Street 2714 \n Don</string>
    <string name="Anand_Singh_techie"><a href="https://github.com/Anand-Singh-techie"></a>Anand_Singh_techie</string>
    <string name="Saurabh_Kumar"><a href="https_github_com_indskgit"></a>Saurabh Kumar</string>
    <string name="saurabh_kumar_developer_role">Saurabh Kumar -- Developer</string>
    <string name="about_us">About Us</string>

</resources>