<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fade_gray"
    tools:context=".CamActive">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/dashboard_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:text="@string/plant_disease_detection"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="311dp"
            android:layout_gravity="center"
            android:layout_height="292dp"
            android:background="@drawable/insect"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="500dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/demoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="0.9"
            android:text="@string/scan_your_crop"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:visibility="gone"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/classified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/detected"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="550dp"
        >
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:clickable="true"
            android:focusable="true"
            android:lineSpacingMultiplier="0.9"
            android:textAllCaps="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="600dp"
        >


        <TextView
            android:id="@+id/click_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_on_result_to_know_more"
            android:textAllCaps="false"
            android:textSize="13sp"
            android:textColor="@color/white_smoke"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="6dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/ic__671722_camera_icon"
            android:backgroundTint="@color/white_smoke"
            android:elevation="2dp"
            android:gravity="bottom" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="1dp"
            android:background="@drawable/ic_cam_wave_bg" />
    </LinearLayout>




</RelativeLayout>